testmetrics lightning talk

--- a/presentations/testmetrics/deck.html
+++ b/presentations/testmetrics/deck.html
@@ -1,19 +1,81 @@
 ---
 layout: presentation
-title: Default Presentation
+title: Testmetrics Lightning Talk
 permalink: /testmetrics/
 ---
 
-# Slide 1
-This is slide 1
+# A quick quiz about your test suite
+
+--
+
+* Did your test suite gest faster or slower over the last month? By how much?
+
+--
+
+* Which tests fail most often?
+
+--
+
+* What percentage of your tests are unit tests? Integration tests?
+
+--
+
+* What parts of your system are tested the most? The least?
+
+--
+
+# Why don't we have answers to these questions?!
 
 ---
 
-# Slide 2
-This is slide 2
+![this is fine](/assets/images/thisisfine.png)
 
-```elixir
-def test() do
-  IO.inspect("HI")
-end
-```
+---
+
+# Testmetrics to the rescue!
+
+![this is fine](/assets/images/logo.png)
+
+---
+
+# Information on your test suite
+
+![this is fine](/assets/images/web_app.png)
+
+---
+
+# GitHub Checks integration (if you want it)
+
+![this is fine](/assets/images/github_checks.png)
+
+---
+
+# Help finding flaky tests
+
+![this is fine](/assets/images/test_failure.png)
+
+---
+
+![this is fine](/assets/images/is_it_worth_the_time.png)
+
+---
+
+# Easy to get started
+
+![this is fine](/assets/images/sinatra.png)
+
+---
+
+# Future features
+
+--
+
+* Much better UI
+
+--
+
+* Test suite analysis
+
+--
+
+* Weekly/monthly progress emails
