starting embedded presentation

--- a/presentations/testmetrics/deck.html
+++ b/presentations/testmetrics/deck.html
@@ -22,51 +22,63 @@ permalink: /testmetrics/
 
 * What parts of your system are tested the most? The least?
 
---
+---
+class: center, middle
 
 # Why don't we have answers to these questions?!
 
 ---
+class: center, middle
 
 ![this is fine](/assets/images/thisisfine.png)
 
 ---
+class: center
 
 # Testmetrics to the rescue!
 
-![this is fine](/assets/images/logo.png)
+![logo](/assets/images/logo.png)
 
 ---
+class: center, middle
 
 # Information on your test suite
 
-![this is fine](/assets/images/web_app.png)
+![web app](/assets/images/web_app.png)
 
 ---
+class: center, middle
 
 # GitHub Checks integration (if you want it)
 
-![this is fine](/assets/images/github_checks.png)
+![github checks](/assets/images/github_checks.png)
 
 ---
+class: center, middle
 
 # Help finding flaky tests
 
-![this is fine](/assets/images/test_failure.png)
+![test failure](/assets/images/test_failure.png)
 
 ---
+class: center, middle
 
-![this is fine](/assets/images/is_it_worth_the_time.png)
+![is it worth it](/assets/images/is_it_worth_the_time.png)
 
 ---
+class: center
 
 # Easy to get started
 
-![this is fine](/assets/images/sinatra.png)
+![getting started](/assets/images/sinatra.png)
 
 ---
 
-# Future features
+# Upcoming features
+
+--
+
+* JavaScript clients
 
 --
 
@@ -79,3 +91,13 @@ permalink: /testmetrics/
 --
 
 * Weekly/monthly progress emails
+
+---
+class: center, middle
+
+# Free for open source!
+
+---
+class: center, middle
+
+# https://www.testmetrics.app
